# YoutubeShuffler

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
e2e/: playlist.e2e.spec.ts  queue.e2e.spec.ts
e2e/fixtures/: playlist.json
src/: App.css  App.tsx  main.tsx  types.ts  x.html
src-tauri/: Cargo.toml  current_song.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppRoutes.tsx  FaqModal.tsx  ImportCard.tsx  ImportedPlaylistsCard.tsx  ManualInputCard.tsx  NowPlayingCard.tsx  NowPlayingOutputCard.tsx  PlayerArea.css  PlayerArea.tsx  PlayerQueueSection.tsx  PlaylistShufflerApp.tsx  Queue.css  Queue.tsx  QueueContextMenu.tsx  StatusMessage.tsx  TwitchRequestCard.tsx
src/components/hooks/: useTwitchRequests.ts
src/components/layout/: Footer.tsx  Header.tsx  SettingsHeader.tsx
src/components/routes/: AboutRoute.tsx  HomeRoute.tsx  SettingsRoute.tsx
src/stores/: playlistStore.ts  twitchStore.ts
src/utils/: importedPlaylistsDb.ts  playlist.ts  tauri.ts  twitch.ts  util.ts  webNowPlayingFile.ts
src/utils/__tests__/: playlist.test.ts  twitch.test.ts
