[package]
name = "yt-playlist-shuffler"
version = "0.1.2"
description = " Youtube Playlist Shuffler"
authors = ["link3337"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yt_playlist_shuffler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-log = "2.7.1"
log = "0.4.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
